<resources>
    <string name="app_name">LitMath</string>
    <string name="spiner_language">Demo Language</string>

    <string name="title_signin">Welcome to Litmath!</string>
    <string name="subtitle_signin">Log In to start learning!</string>
    <string name="instructions_signin">Sign In</string>
    <string name="edt_email_signin">user@email.com</string>
    <string name="edt_password_signin">******</string>
    <string name="check_signin">Remember me</string>
    <string name="help_signin">Need Help?</string>
    <string name="button_sigin">Sign In</string>
    <string name="register_signin">Don\'t have an account?</string>
    <string name="register_link_sigin">Register instead</string>

    <string name="dialog_lng_title">Select a Language</string>
    <string name="dialog_option_en">English</string>
    <string name="dialog_option_es">Spanish</string>
    <string name="dialog_option_pt">Portuguese</string>

    <string name="title_signup">Ready to join?</string>
    <string name="subtitle_signup">Nice to see you again, we are ready.</string>
    <string name="instructions_signup">Sign Up</string>
    <string name="edt_full_name_signup">Full Name</string>
    <string name="edt_email_signup">Email</string>
    <string name="edt_password_signup">Password</string>
    <string name="edt_repeat_password_signup">Repeat Password</string>
    <string name="edt_phone_signup">Phone</string>
    <string name="dialog_client_signup">Type Client</string>
    <string name="dialog_client_title_signup">Message</string>
    <string name="dialog_client_instructions_signup">Select a type client</string>
    <string name="dialog_client_neutral_signup">Cancel</string>
    <string name="dialog_client_admin_signup">Admin</string>
    <string name="dialog_client_client_signup">Client</string>
    <string name="btn_tycos_signup">Accept terms and conditions</string>
    <string name="btn_signup">Sign Up!</string>
    <string name="btn_signin_signup">If you already have and account, sign in.</string>

    <string name="dialog_create_user_title">Message</string>
    <string name="dialog_create_user_message">User created! to access it is necessary to validate your account by email, enter the link that was sent.</string>
    <string name="dialog_create_user_positive">Accept</string>

    <string name="subtitle_home">Menu</string>
    <string name="button_meet_home">Meet</string>

    <string name="title_recovery">Recover Password</string>
    <string name="subtitle_recovery">To recover your password you need to enter the email with which you registered.</string>
    <string name="instructions_recovery">Use your registered email</string>
    <string name="button_recovery">Recover Password</string>

    <string name="title_meet">Meet</string>
    <string name="subtitle_meet">Use the ID provided by your administrator or your client</string>
    <string name="instructions_meet">Enter Admin Code or Meet ID</string>
    <string name="button_meet">Start Meet</string>

    <string name="title_profile">Profile</string>
    <string name="instructions_profile">Update Profile</string>
    <string name="btn_update_profile">Update Profile</string>

    <string name="cheers_morning">Good Morning</string>
    <string name="cheers_afternoon">Good Afternoon</string>
    <string name="cheers_evening">Good Evening</string>
    <string name="cheers_night">Good Night</string>

    <string name="btn_sign_out">Logout</string>
</resources>